# trainer-tg

./: .gitignore  Cargo.toml  README.md
src/: commands.rs  dialogue.rs  main.rs
src/dialogue/: format.rs
